my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBITRN_2/EBITRN_2.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITRN_2.dml:12:9: error EBITRN: negative size (28 < 29) of bit range for 'b.r.f'
